--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <div class="mentorship spacing-a-1rem">
               <a class="a-txt-regular" href="#">Mentorship</a>
             </div>
-            <button class="btn a-txt-clr">Say Hello!</button>
+            <button class="my-btn a-txt-clr">Say Hello!</button>
           </div>
         </div>
       </div>
@@ -75,7 +75,8 @@
     <!-- hero-section -->
 
     <!-- about-me -->
-    <div class="container-fluid bg-color-prple h-85">
+
+    <div class="container-fluid py-5 px-5 bg-clr-splitter">
       <div class="row justify-content-center spacing-t-8rem">
         <div class="aboutme-txt w-55 text-center">
           <h3>Hi, I’m Matt. Nice to meet you.</h3>
@@ -89,49 +90,47 @@
           </p>
         </div>
       </div>
-      <div
-        class="row bg-color-white my-5 mx-5 spacing-a-3rem text-center rounded-3"
-      >
-        <div class="col-md-4 border border-3 rounded-3 spacing-a-3rem">
+      <div class="row bg-color-white my-5 text-center rounded-3">
+        <div class="col-sm-4 border border-3 rounded-3 spacing-t-3rem">
           <img src="./images/designer.svg" alt="" />
-          <h4 class="spacing-a-3rem">Designer</h4>
-          <p>
+          <h4 class="spacing-t-3rem">Designer</h4>
+          <p class="spacing-t-2rem">
             I value simple content structure, clean design patterns, and
             thoughtful interactions.
           </p>
-          <p class="a-txt-clr spacing-a-2rem">Things I enjoy designing:</p>
+          <p class="a-txt-clr spacing-t-2rem">Things I enjoy designing:</p>
           <p>UX, UI, Web, Mobile, Apps, Logos</p>
-          <p class="a-txt-clr spacing-a-2rem">Design Tools:</p>
+          <p class="a-txt-clr spacing-t-2rem">Design Tools:</p>
           <p>
             Balsamiq Mockups Figma Invision Marvel Pen & Paper Sketch Webflow
             Zeplin
           </p>
         </div>
-        <div class="col-md-4 border border-3 rounded-3 spacing-a-3rem">
+        <div class="col-sm-4 border border-3 rounded-3 spacing-t-3rem">
           <img src="./images/frontend.svg" alt="" />
-          <h4 class="spacing-a-3rem">Front-end Developer</h4>
+          <h4 class="spacing-t-3rem">Front-end Developer</h4>
           <p>
             I value simple content structure, clean design patterns, and
             thoughtful interactions.
           </p>
-          <p class="a-txt-clr spacing-a-2rem">Things I enjoy designing:</p>
+          <p class="a-txt-clr spacing-t-2rem">Things I enjoy designing:</p>
           <p>UX, UI, Web, Mobile, Apps, Logos</p>
-          <p class="a-txt-clr spacing-a-2rem">Design Tools:</p>
+          <p class="a-txt-clr spacing-t-2rem">Design Tools:</p>
           <p>
             Balsamiq Mockups Figma Invision Marvel Pen & Paper Sketch Webflow
             Zeplin
           </p>
         </div>
-        <div class="col-md-4 border border-3 rounded-3 spacing-a-3rem">
+        <div class="col-sm-4 border border-3 rounded-3 spacing-t-3rem">
           <img src="./images/mentor.svg" alt="" />
-          <h4 class="spacing-a-3rem">Mentor</h4>
-          <p>
+          <h4 class="spacing-t-3rem">Mentor</h4>
+          <p class="spacing-t-2rem">
             I value simple content structure, clean design patterns, and
             thoughtful interactions.
           </p>
-          <p class="a-txt-clr spacing-a-2rem">Things I enjoy designing:</p>
+          <p class="a-txt-clr spacing-t-2rem">Things I enjoy designing:</p>
           <p>UX, UI, Web, Mobile, Apps, Logos</p>
-          <p class="a-txt-clr spacing-a-2rem">Design Tools:</p>
+          <p class="a-txt-clr spacing-t-2rem">Design Tools:</p>
           <p>
             Balsamiq Mockups Figma Invision Marvel Pen & Paper Sketch Webflow
             Zeplin
@@ -141,6 +140,103 @@
     </div>
     <!-- about-me -->
 
+    <!-- my-work -->
+    <div class="container-fluid spacing-t-4rem">
+      <div class="row text-center">
+        <h4>My Work</h4>
+        <p>
+          Here are a few design projects I've worked on recently. Want to see
+          more? <a class="a-txt-clr" href="#">Email me.</a>
+        </p>
+      </div>
+      <div class="row justify-content-center text-center spacing-a-2rem">
+        <div class="col-md-3">
+          <div
+            class="bg-text bg-color-navi-b spacing-a-2rem position-relative rounded-3"
+          >
+            <h4 class="a-txt-clr-wh">
+              High-end, custom residential renovaters serving Fraser Valley
+              homeowners.
+            </h4>
+            <button class="btn a-txt-clr">Say Hello!</button>
+            <div class="bg-img position-absolute position_ rounded-3">
+              <img class="rounded-3" src="./images/wfdesignbuild.png" alt="" />
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3 offset-md-1">
+          <div
+            class="bg-text bg-color-navi-b spacing-a-2rem position-relative rounded-3"
+          >
+            <h4 class="a-txt-clr-wh">
+              High-end, custom residential renovaters serving Fraser Valley
+              homeowners.
+            </h4>
+            <button class="btn a-txt-clr">Say Hello!</button>
+            <div class="bg-img position-absolute position_ rounded-3">
+              <img class="rounded-3" src="./images/wfdesignbuild.png" alt="" />
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3 offset-md-1">
+          <div
+            class="bg-text bg-color-navi-b spacing-a-2rem position-relative rounded-3"
+          >
+            <h4 class="a-txt-clr-wh">
+              High-end, custom residential renovaters serving Fraser Valley
+              homeowners.
+            </h4>
+            <button class="btn a-txt-clr">Say Hello!</button>
+            <div class="bg-img position-absolute position_ rounded-3">
+              <img class="rounded-3" src="./images/wfdesignbuild.png" alt="" />
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row justify-content-center">
+        <button class="my-btn a-txt-clr w-20">
+          <i class="fa-solid fa-basketball f-awsm-spacing"></i> See more on
+          Dribble
+        </button>
+      </div>
+    </div>
+    <!-- my-work -->
+
+    <!-- Companies -->
+    <div class="conatiner-fluid spacing-t-4rem text-center">
+      <div class="row justify-content-center w-50 mx-auto">
+        <h4 class="spacing-a-3rem">
+          I'm proud to have collaborated with some awesome companies:
+        </h4>
+        <div class="col-md-3">
+          <img src="./images/chronicled.svg" alt="" />
+        </div>
+        <div class="col-md-2 offset-md-1">
+          <img src="./images/briteweb.svg" alt="" />
+        </div>
+        <div class="col-md-2 offset-md-1">
+          <img src="./images/domain7.svg" alt="" />
+        </div>
+        <div class="col-md-2 offset-md-1">
+          <img src="./images/goodkind.svg" alt="" />
+        </div>
+      </div>
+      <div class="row justify-content-center w-50 mx-auto">
+        <div class="col-md-3">
+          <img src="./images/designlab.png" alt="" />
+        </div>
+        <div class="col-md-2 offset-md-1">
+          <img src="./images/redstamp.svg" alt="" />
+        </div>
+        <div class="col-md-2 offset-md-1">
+          <img src="./images/domain7.svg" alt="" />
+        </div>
+        <div class="col-md-2 offset-md-1">
+          <img src="./images/serpmetrics.svg" alt="" />
+        </div>
+      </div>
+    </div>
+    <!-- Companies -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
